<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:padding="24dp">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <EditText
        android:id="@+id/edituserLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginTitle"
        android:layout_marginTop="27dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/email_hint"
        android:textColorHint="#AAAAAA"
        android:inputType="textEmailAddress"
        android:autofillHints="Nombre de Usuario"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/editPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edituserLogin"
        android:layout_marginTop="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/password_hint"
        android:textColorHint="#AAAAAA"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editPasswordLogin"
        android:layout_marginTop="84dp"
        android:backgroundTint="#00C853"
        android:text="@string/btn_login"
        android:textColor="@android:color/white" />

</RelativeLayout>
