<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_entrenar_completo"
    android:padding="16dp"
    tools:context="">

    <!-- Título -->

    <!-- Hombros -->

    <!-- Bíceps -->

    <!-- Pecho -->

    <!-- Espalda -->

    <!-- Abdomen -->

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/titulo_entrenar"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Piernas -->

    <TextView
        android:id="@+id/txtHombros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="176dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="12dp"
        android:text="@string/hombros"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo" />

    <TextView
        android:id="@+id/txtBiceps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="80dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="12dp"
        android:text="@string/biceps"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo" />

    <TextView
        android:id="@+id/txtPecho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="12dp"
        android:text="@string/pecho"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo" />

    <TextView
        android:id="@+id/txtEspalda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="64dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="12dp"
        android:text="@string/espalda"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtHombros" />

    <TextView
        android:id="@+id/txtAbdomen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="12dp"
        android:text="@string/abdomen"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPecho" />

    <TextView
        android:id="@+id/txtPiernas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="12dp"
        android:text="@string/piernas"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAbdomen" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="138dp"
        android:layout_height="73dp"
        android:src="@drawable/velozerfit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
